artifacthub/library/general/containerresources/1.0.0/samples/container-must-have-cpu-requests-memory-limits-and-requests/empty-resources-disallowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: opa-disallowed
  labels:
    owner: me.agilebank.demo
spec:
  containers:
    - name: opa
      image: openpolicyagent/opa:0.9.2
      args:
        - "run"
        - "--server"
        - "--addr=localhost:8080"
      resources: {}
      securityContext:
        allowPrivilegeEscalation: false
